[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Entities/FirstPersonPlayer/FirstPersonPlayer.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]
height = 2.0

[node name="FirstPersonPlayer" type="KinematicBody"]
script = ExtResource( 1 )

[node name="Head" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
fov = 90.0
far = 200.0

[node name="CapsuleCollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
enabled = true
cast_to = Vector3( 0, -3, 0 )

[node name="Debug" type="Node" parent="."]

[node name="FloorAngleLabel" type="Label" parent="Debug"]
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = 413.0
margin_bottom = 14.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedLabel" type="Label" parent="Debug"]
anchor_top = 0.06
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = 413.0
margin_bottom = 14.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StateLabel" type="Label" parent="Debug"]
anchor_top = 0.09
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = 413.0
margin_bottom = 14.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
__meta__ = {
"_edit_use_anchors_": false
}
